# darwinAgent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gradio_app.py  main.py  project_struct.txt  pyproject.toml  requirements.txt  setup.py  test_redis_search.py
app/: main.py
app/ui/: __init__.py  app.py
app/ui/components/: __init__.py  chat.py  search.py  settings.py
app/ui/pages/: __init__.py  about.py  chat_page.py  home.py
app/ui/themes/: __init__.py  default.py
app/ui/utils/: __init__.py  callbacks.py
demo/: README_lcel_memory.md  langgraph_memory_minimal.ipynb  langgraph_redis_simple.py  lcel_memory.ipynb  memory.ipynb  modern_memory.ipynb  run_lcel_memory.py  run_memory_demo.py
docs/: langgraph_memory_guide.md
examples/: README_langgraph_memory.md  async_langgraph_memory.py  fastapi_langgraph_memory.py  langgraph_memory_example.py  test_api_client.py
static/css/: custom.css
static/js/: custom.js
tests/: test_base_chat.ipynb
